fix: copy game.html and mobile.html into dist during Pages build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,11 @@ jobs:
       - name: Install deps
         run: npm ci
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          # Copy additional static entrypoints not handled by Vite's index.html
+          cp game.html dist/game.html || echo 'game.html missing'
+          cp mobile.html dist/mobile.html || echo 'mobile.html missing'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
