feat: multi-page Vite build (index/game/mobile) to fix /src/main.ts 404; simplify workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,7 @@ jobs:
       - name: Build
         run: |
           npm run build
-          # Copy additional static entrypoints not handled by Vite's index.html
-          cp game.html dist/game.html || echo 'game.html missing'
-          cp mobile.html dist/mobile.html || echo 'mobile.html missing'
-          # Ensure raw asset images referenced by HTML backgrounds are present
+          # Copy assets (until migrated to /public) for backgrounds
           cp -R assets dist/assets || echo 'assets directory missing'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
