ci: add defensive asset copy step to pages workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Ensure static image assets present (defense-in-depth)
+        run: |
+          mkdir -p dist/assets
+          cp -n assets/*.png dist/assets/ || true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
